# Code_Porfolio

./: .gitmodules  LICENSE  README.md
microwave/: README.md  microwave.py  run_microwave.py
microwave/tests/: run_test.py
microwave/tests/unit/: test_microwave.py
microwave/tests/verification/basic_test/: input.txt
microwave/tests/verification/basic_test/gold/: output.txt
neural_network_polynomial_learner/: README.md  derivative_informed_nn.py  function.py  polynomial.py
neural_network_polynomial_learner/analyses/: README.md  quadratic_nn.py
neural_network_polynomial_learner/tests/: run_tests.py
neural_network_polynomial_learner/tests/unit/: test_derivative_informed_nn.py  test_polynomial.py
tree_intersection/: README.md  node.py  tree_intersection.py
tree_intersection/C++/: CMakeLists.txt  README.md
tree_intersection/C++/source/: CMakeLists.txt  Node.cpp  Node.h  tree_intersection.cpp
tree_intersection/C++/tests/: CMakeLists.txt
tree_intersection/C++/tests/unit/: CMakeLists.txt  test_node.cpp
tree_intersection/C++/tests/verification/: CMakeLists.txt
tree_intersection/C++/tests/verification/coding_challenge_example/: test_coding_challenge_example.cpp
tree_intersection/Python/: README.md  node.py
tree_intersection/Python/tests/: run_tests.py
tree_intersection/Python/tests/unit/: test_node.py
tree_intersection/tests/: run_tests.py
tree_intersection/tests/verification/coding_challenge_example/: input.json
tree_intersection/tests/verification/repeat_intersect_branches/: input.json
(+11 files in other folders)
